# atp-main

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEEP_DIVE_SUMMARY.md  ENHANCEMENTS.md  ENTERPRISE_OVERHAUL_PLAN.md  GEMINI.md  LICENSE  Makefile  OPTIMIZATION_PLAN.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  SECURITY.md  SECURITY_CLEANUP_SUMMARY.md  TODO.md  alembic.ini  atp-flow-diagram.md  docker-compose.yml  error_budget_config.json  go-to-market.md  install_protoc.ps1  mypy.ini  package-lock.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_all.txt  requirements_optimized.txt  ruff.toml  sla_catalog.json  tempo.yaml
adapters/: __init__.py  base.py  registry.py
admin-dashboard/: package.json
admin_aggregator/: README.md  app.py
atp-main-appliance/: Makefile  TODO.md
atp-router/: Cargo.toml  rust-toolchain.toml
atp-router/crates/atp-router/: Cargo.toml
atp-router/crates/atp-router/src/: adapters.rs  consensus.rs  main.rs
client/: README.md  fragmentation_demo.py  health_check.py  mcp_cli.py  memory_put_get.py  memory_tools.py  tool_schema_versioning.py  ws_client_stub.py
configs/: config_loader.py
docs/: 01_ATP.md  02_v0.2 Addendum & Clarifications.md  03_IMPLEMENTATION_PLAN.md  04_AGP_Federation_Spec.md  05_Phase01_mvp.md  06_Persona_Adapters_and_Parallelism.md  07_Router_Spec_Update_Parallelism.md  08_Router_State_Diagrams.md  09_Security_Model_and_WAF.md  10_Memory_and_Context_Fabric.md  10_Shared_Memory_Spec.md  11_Continuous_Learning_Playbook.md  (+83 more)
(+1003 files in other folders)
