
[package]
name = "atp-router"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws","http2"] }
tokio = { version = "1", features = ["rt-multi-thread","macros","net","signal","sync","io-util","time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","registry"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.22" }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16", features = ["tonic","metrics"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.14"
once_cell = "1.19"
num_cpus = "1.16"
reqwest = { version = "0.11", features = ["json","rustls-tls","blocking"] }
anyhow = "1.0"

atp-schema = { path = "../atp-schema" }
atp-adapter-proto = { path = "../atp-adapter-proto" }
